# ai-race-simulation

./: LLM-based Multi-Agent Simulation of AI Race.md  README.md  pyproject.toml
backend/src/: app_team.html  run_service.py  team_history.json  team_state.json
backend/src/agents/: __init__.py  agents.py
backend/src/config/: model_gemini_config.yaml
backend/src/schema/: __init__.py  models.py  schema.py
backend/src/service/: service.py
backend/src/settings/: __init__.py  action_definition.py  company_agent_profile.py  country_agent_profile.py  settings.py
backend/src/teams/: __init__.py  teams.py
backend/src/utils/: __init__.py  utils.py
